# esp32-electric-desk-controller

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.esp32dev
components/ui/: CMakeLists.txt  filelist.txt  fix_CMakeLists_file.sh  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui/fonts/: ui_font_MontserratSemiBold14.c  ui_font_MontserratSemiBold30.c
components/ui/images/: ui_img_clock_png.c  ui_img_empty_12x12_png.c  ui_img_sort_down_png.c  ui_img_sort_up_png.c  ui_img_stopwatch_png.c  ui_img_wifi_solid_png.c
components/ui/screens/: ui_BootScreen.c  ui_MainScreen.c  ui_MemoryScreen.c  ui_MenuScreen.c  ui_Screen1.c  ui_SettingsScreen.c  ui_TestRollerScreen.c  ui_TimerScreen.c  ui_testMenuScreen.c
graphics/: ctrlPanel_UI.psd  ssd1306_128x64_blank.psd
main/: main.c  main.cpp
squareline_project/: ElectricDeskControllerUI.sll  ElectricDeskControllerUI.spj  ElectricDeskControllerUI_events.py
squareline_project/assets/fonts/FontAwesome/: ui_font_FontAwesomeRegular12.c  ui_font_FontAwesomeRegular12.fcfg  ui_font_FontAwesomeRegular24.c  ui_font_FontAwesomeRegular24.fcfg
squareline_project/assets/fonts/Montserrat/: ui_font_MontserratSemiBold10.c  ui_font_MontserratSemiBold10.fcfg  ui_font_MontserratSemiBold14.fcfg  ui_font_MontserratSemiBold24.c  ui_font_MontserratSemiBold24.fcfg  ui_font_MontserratSemiBold30.fcfg
src/: main.cpp
